# rust-mumbai

./: README.md
examples/rekognition-api/: Cargo.toml
samples/open-ai-assistant/: Cargo.toml
samples/open-ai-assistant/src/: main.rs
samples/rekognition-api/: Cargo.toml  example.env
samples/rekognition-api/src/: main.rs
