[package]
name = "face-match"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
awc = { version = "3.2.0", features = ["openssl"] }
aws-config = "0.57.1"
aws-sdk-rekognition = "0.35.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
dotenv = "0.15.0"
